--- a/client/src/pages/listening/listening.scss
+++ b/client/src/pages/listening/listening.scss
@@ -4,6 +4,11 @@
   display: flex;
   flex-direction: column;
   flex-grow: 1;
+  /* Ensure content fits within viewport on mobile */
+  @media only screen and (max-width: 767px) {
+    height: 100%;
+    overflow: hidden;
+  }
 }
 
 .game-visualization {
